<resources>
    <string name="app_name">Mkuki</string>
    <string name="action_settings">Settings</string>
    <string name="error_unknown">Unkwown Error Occured</string>
    <string name="action_retry">Retry</string>
    <string name="title_activity_hunt">Hunt</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_photo_view">PhotoView</string>
    <string name="title_hunter">Hunter</string>
    <string name="action_get_it">Get It</string>
    <string name="title_makers">Makers</string>
    <string name="title_discussion">Discussion</string>
    <string name="title_related_posts">Related Posts</string>
    <string name="string_no_makers">There are no makers yet.</string>
    <string name="string_no_related_posts">There are no related posts yet</string>
    <string name="string_no_comments">There are no comments yet</string>
    <string name="action_install">Install</string>
    <string name="action_share">Share</string>
</resources>
