<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.HuntActivity"
    tools:showIn="@layout/activity_hunt">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/colorWhite"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/image_view_thumbnail"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/text_view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginRight="8dp"
                android:maxLines="2"
                android:textSize="28sp"
                style="@style/TextAppearance.AppCompat.Display1" />
            <ImageView
                android:id="@+id/image_view_trending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_gravity="center"
                android:visibility="gone"
                android:src="@drawable/ic_trending_up_yellow_24dp"/>
            <ImageView
                android:id="@+id/image_view_android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:src="@drawable/ic_android_green_24dp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/text_view_tagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="16dp"
            android:lineSpacingExtra="4dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:maxLines="2"
            style="@style/TextAppearance.AppCompat.Body1" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="16dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/background_hunts"
                android:layout_marginRight="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="12dp"
                android:paddingBottom="4dp"
                android:paddingTop="4dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_arrow_drop_up_grey_600_18dp" />
                <TextView
                    android:id="@+id/text_view_vote_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="4.5k"
                    android:textColor="#616161"
                    style="@style/TextAppearance.AppCompat.Subhead" />
            </LinearLayout>
            <Button
                android:id="@+id/btn_get_it"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:textColor="@color/colorWhite"
                android:text="@string/action_get_it"
                android:textSize="12sp"
                style="@style/Button.Primary"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/title_hunter"
            android:layout_marginBottom="16dp"
            style="@style/TextAppearance.AppCompat.Body2"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circle_image_view_hunter"
                android:layout_width="42dp"
                android:layout_height="42dp"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/colorLightGrey"
                android:layout_marginRight="16dp"/>
            <TextView
                android:id="@+id/text_view_hunter_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                style="@style/TextAppearance.AppCompat.Body1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="8dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_makers"
                style="@style/TextAppearance.AppCompat.Body2"/>
            <Button
                android:id="@+id/btn_view_all_makers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="View All"
                android:visibility="gone"
                android:textColor="@color/colorPrimary"
                style="@style/Widget.AppCompat.Button.Borderless"/>
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            android:id="@+id/layout_no_makers"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/string_no_makers"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingBottom="32dp"
                style="@style/TextAppearance.AppCompat.Small"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_discussion"
                style="@style/TextAppearance.AppCompat.Body2"/>
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ProgressBar
            android:id="@+id/progress_bar_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="32dp"/>
        <RelativeLayout
            android:id="@+id/layout_no_comments"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/string_no_comments"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingBottom="32dp"
                style="@style/TextAppearance.AppCompat.Small"/>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="8dp"
            android:text="@string/title_related_posts"
            style="@style/TextAppearance.AppCompat.Body2"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_related_posts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ProgressBar
            android:id="@+id/progress_bar_related_posts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="32dp"/>
        <RelativeLayout
            android:id="@+id/layout_no_related_posts"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/string_no_related_posts"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingBottom="32dp"
                style="@style/TextAppearance.AppCompat.Small"/>
        </RelativeLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
